load(
    "//tools:mro_rules.bzl",
    "mrf_test",
    "mro_library",
    "mro_test",
)
load("//test:integration_test.bzl", "integration_test")

mro_library(
    name = "pipeline",
    testonly = True,
    srcs = ["pipeline.mro"],
    deps = ["//test/exit_test/stages/exit"],
)

mro_test(
    name = "pipeline_test",
    size = "small",
    srcs = [":pipeline"],
)

mrf_test(
    name = "pipeline_format",
    srcs = [":pipeline"],
)

integration_test(
    name = "exit_test",
    config = "exit_test.json",
    expectation = glob(["expected/**"]),
    pipeline = ":pipeline",
    runner = "run_test.sh",
)
