load(
    "//tools:mro_rules.bzl",
    "mrf_test",
    "mro_library",
    "mro_test",
)
load("//test:integration_test.bzl", "integration_test")

mro_library(
    name = "call",
    testonly = True,
    srcs = ["call.mro"],
    deps = [":pipeline"],
)

mro_test(
    name = "call_test",
    size = "small",
    srcs = [":call"],
)

mro_library(
    name = "pipeline",
    testonly = True,
    srcs = ["pipeline.mro"],
    deps = [
        "//test/retain_test/stages/add_key",
        "//test/retain_test/stages/merge_json",
    ],
)

mro_test(
    name = "pipeline_test",
    size = "small",
    srcs = [":pipeline"],
)

mrf_test(
    name = "call_format",
    srcs = [":call"],
)

integration_test(
    name = "retain_test",
    config = "retain_test.json",
    expectation = glob(["expected/**"]),
    pipeline = ":call",
    runner = "run_test.sh",
)
