load(
    "//tools:mro_rules.bzl",
    "mrf_test",
    "mro_library",
    "mro_test",
)
load("//test:integration_test.bzl", "integration_test")

mro_library(
    name = "pipeline",
    testonly = True,
    srcs = ["pipeline.mro"],
    deps = [
        "//test/split_test/stages/report",
        "//test/split_test/stages/sum_squares",
    ],
)

mro_test(
    name = "pipeline_test",
    size = "small",
    srcs = [":pipeline"],
)

mrf_test(
    name = "pipeline_format",
    srcs = [":pipeline"],
)

integration_test(
    name = "split_test",
    config = "split_test.json",
    expectation = glob(["expected/**"]),
    pipeline = ":pipeline",
    runner = "run_test.sh",
)
